--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: ["*"]
+    branches: [main]
 
 jobs:
   build-and-test:
@@ -42,11 +42,3 @@ jobs:
 
       - name: Run tests
         run: npm test
-      - name: Run tests with coverage
-        run: npm run coverage
-
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage
