--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: ["*"]
+    branches: [main]
 
 jobs:
   build-and-test:
@@ -28,6 +28,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Debug info
         run: |
           node -v
@@ -37,11 +40,6 @@ jobs:
       - name: Lint code
         run: npm run lint
 
-      - name: Run tests with coverage
-        run: npm run coverage
+      - name: Run tests
+        run: npm test
 
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage
