--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "eslint": "^8.57.1",
     "mocha": "^11.7.4",
     "nyc": "^17.1.0"
-  }
+  },
+  "nyc": {
+  "reporter": ["lcov", "text"],
+  "exclude": ["test/"]
+}
+
 }
